# advent-of-code

./: .gitignore
aoc-py/: pyproject.toml
aoc-py/src/aoc_py/: __init__.py
aoc-py/src/aoc_py/year2024/: __init__.py  day1.py
aoc-rs/: .env  Cargo.toml
aoc-rs/src/: main.rs
